--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -24,11 +24,13 @@
 
     <EditText
         android:id="@+id/et_name"
+        android:inputType="text"
+        android:autofillHints="name"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginHorizontal="20dp"
         android:gravity="center|clip_vertical"
-        android:hint="Enter Your Name"
+        android:hint="@string/enter_your_name_hint"
         android:textSize="20sp"
         android:layout_marginBottom="50dp"
         app:layout_constraintBottom_toTopOf="@+id/tv_name"
@@ -43,7 +45,7 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="100dp"
         android:gravity="center|clip_vertical"
-        android:text="Show Name"
+        android:text="@string/button_show_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_name" />
